add varialbles, mixins and footer styles

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -8,6 +8,7 @@
 @import './components/buttons';
 
 // Estilos de elementos por secciones:
+@import './layout/landingBody';
 @import './layout/header';
 @import './layout/section';
 @import './layout/footer';
@@ -19,16 +20,4 @@
   ::-webkit-scrollbar {
     display: none;
   }
-}
-.container__general{
-  padding-left: 1rem;
-  padding-right: 1rem;
-  @include mediaSize(tablet){
-      padding-left: 2rem;
-      padding-right: 2rem;
-  }
-  @include mediaSize(desktop){
-      padding-left: 3rem;
-      padding-right: 3rem;
-  } 
 }
