--- a/src/stylesheets/layout/_header.scss
+++ b/src/stylesheets/layout/_header.scss
@@ -1,13 +1,10 @@
 // ESTILOS DE CONTENEDOR -----------------------------------------
-.container__page--header{
+.header{
     width: 100vw;
-    background-color: $backgroundHeader;
-    border-bottom: 1px solid $colorTheme4;
-}
-.container__section--header{
-    width: 100%;
     height: $headerHeightMobile;
 
+    background-color: $backgroundHeader;
+    border-bottom: 1px solid $colorTheme4;
     display: flex;
     justify-content: flex-start;
     align-items: flex-end;
@@ -19,7 +16,7 @@
     @include mediaSize(desktop){
         height: $headerHeightDesktop;
     }
-}  
 
+}
 
 // ESTILOS DE ELEMENTOS -------------------------------------------
