set landin page styles

--- a/src/stylesheets/components/_buttons.scss
+++ b/src/stylesheets/components/_buttons.scss
@@ -1,3 +1,36 @@
 // INPUTS
 
 // BUTTONS
+.button{
+    min-width: 120px;
+    min-height: 40px;
+    border-radius: 25px;
+    @include centerFlexRow;
+    &:hover{
+        filter: brightness(70%);
+    }
+    &__color1{
+        background-color: $colorTheme1;
+        color: $colorTextLight;
+        &--noFill{
+            border: 2px solid $colorTheme1;
+            color: $colorTheme1;
+        }    
+    }
+    &__color2{
+        background-color: $colorTheme2;
+        color: $colorTextLight;
+        &--noFill{
+            border: 2px solid $colorTheme2;
+            color: $colorTheme2;
+        }    
+    }
+    &__color3{
+        background-color: $colorTheme3;
+        color: $colorTextLight;
+        &--noFill{
+            border: 2px solid $colorTheme3;
+            color: $colorTheme3;
+        }    
+    }
+}
