--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -3,20 +3,23 @@
 @import './core/variables';
 @import './core/mixins';
 
+// Estilos de layout:
+@import './layout/header';
+@import './layout/section';
+@import './layout/footer';
+
 // Estilos por componente:
 @import './components/typography';
 @import './components/buttons';
 
-// Estilos de elementos por secciones:
-@import './layout/landingBody';
-@import './layout/header';
-@import './layout/section';
-@import './layout/footer';
+@import './components/landingBody';
+
 
 
 // ESTILOS GENERALES DE PÁGINA ---------------------------------------
 .App{
   width: 100vw;
+  cursor: default;
   ::-webkit-scrollbar {
     display: none;
   }
