set form and ranking styles and add form logos

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -13,7 +13,8 @@
 @import './components/buttons';
 
 @import './components/landingBody';
-
+@import './components/form';
+@import './components/ranking';
 
 
 // ESTILOS GENERALES DE PÁGINA ---------------------------------------
