--- a/src/stylesheets/components/_buttons.scss
+++ b/src/stylesheets/components/_buttons.scss
@@ -1,5 +1,3 @@
-// INPUTS
-
 // BUTTONS
 .button{
     min-width: 120px;
@@ -13,6 +11,7 @@
         background-color: $colorTheme1;
         color: $colorTextLight;
         &--noFill{
+            background-color: $colorTransparent;
             border: 2px solid $colorTheme1;
             color: $colorTheme1;
         }    
@@ -21,6 +20,7 @@
         background-color: $colorTheme2;
         color: $colorTextLight;
         &--noFill{
+            background-color: $colorTransparent;
             border: 2px solid $colorTheme2;
             color: $colorTheme2;
         }    
@@ -29,6 +29,7 @@
         background-color: $colorTheme3;
         color: $colorTextLight;
         &--noFill{
+            background-color: $colorTransparent;
             border: 2px solid $colorTheme3;
             color: $colorTheme3;
         }    
