--- a/src/stylesheets/components/_typography.scss
+++ b/src/stylesheets/components/_typography.scss
@@ -4,15 +4,37 @@
     font-weight: $fontExtraBold;
     color: $colorTextBase;
     text-transform: none;
-    font-size: 20px;
-    &__main{
-        font-size: 90px;
-    }
-    &__subMain{
-        font-size: 40px;
-        color: $colorTheme1;
+    font-size: 25px;
+    @include mediaSize(tablet){
+        font-size: 25px;
     }
 
+    &__main{
+        font-size: 60px;
+        @include mediaSize(tablet){
+            font-size: 90px;
+        }
+    }
+    &__subMain{
+        font-size: 25px;
+        color: $colorTheme1;
+        @include mediaSize(tablet){
+            font-size: 40px;
+        }
+    }
+    &__header{
+        font-size: 30px;
+        @include mediaSize(tablet){
+            font-size: 45px;
+        }
+    }
+    &__subHeader{
+        font-size: 12.5px;
+        color: $colorTheme1;
+        @include mediaSize(tablet){
+            font-size: 20px;
+        }
+    }
 }
 
 // TEXTS
