--- a/src/stylesheets/core/_variables.scss
+++ b/src/stylesheets/core/_variables.scss
@@ -9,7 +9,7 @@ $colorShadow: #5C5C5C;
 
 // THEME COLORS
 $colorTheme1: #426A5A;
-$colorTheme2: #04151F;
+$colorTheme2: #BF6900;
 $colorTheme3: #432534;
 $colorTheme4: #FAFAFA;
 $colorTheme5: $colorWhite;
@@ -37,21 +37,21 @@ $backgroundFooter: $colorTheme5;
 
 // MEASUREMENTS
 // ---> Mobile:
-    $landingBodyHeightMobile: calc(100vh - 65px);
-    $footerHeightMobile: 65px;
+    $landingBodyHeightMobile: calc(100vh - 40px);
+    $footerHeightMobile: 40px;
 
-    $headerHeightMobile: auto;
-    $sectionHeightMobile: auto;
+    $headerHeightMobile: 60px;
+    $sectionHeightMobile: calc(100vh - 40px - 60px);
 
 // ---> Tablet:
-    $landingBodyHeightTablet: calc(100vh - 65px);
-    $footerHeightTablet: 65px;
+    $landingBodyHeightTablet: calc(100vh - 40px);
+    $footerHeightTablet: 40px;
 
-    $headerHeightTablet: 15vh;
-    $sectionHeightTablet: 80vh;
+    $headerHeightTablet: 90px;
+    $sectionHeightTablet: calc(100vh - 40px - 90px);
 // ---> Desktop:
-    $landingBodyHeightDesktop: calc(100vh - 65px);
-    $footerHeightDesktop: 65px;
+    $landingBodyHeightDesktop: calc(100vh - 50px);
+    $footerHeightDesktop: 50px;
     
-    $headerHeightDesktop: 15vh;
-    $sectionHeightDesktop: calc(85vh - 65px);
+    $headerHeightDesktop: 90px;
+    $sectionHeightDesktop: calc(100vh - 50px - 90px);
