add detail info and styles

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -15,6 +15,7 @@
 @import './components/landingBody';
 @import './components/form';
 @import './components/ranking';
+@import './components/detail';
 
 
 // ESTILOS GENERALES DE PÁGINA ---------------------------------------
