--- a/src/stylesheets/components/_form.scss
+++ b/src/stylesheets/components/_form.scss
@@ -3,8 +3,12 @@
     width: 100%;
     height: 100%;
     padding: 20px;
-    border-right: 1px solid $colorShadow;
     background-color: $colorTheme4;
+    border-bottom: 1px solid $colorShadow;
+    @include mediaSize(tablet){
+        border-bottom: none;
+        border-right: 1px solid $colorShadow;
+    }
 }
 
 // ESTILOS DE ELEMENTOS -------------------------------------------
@@ -14,7 +18,7 @@
 }
 .form__selection{
     width: 100%;
-    height: 60px;
+    height: auto;
     margin-bottom: 2em;
     display: flex;
     flex-direction: row;
@@ -27,21 +31,28 @@
         color: $colorMiddle;
         font-size: 18px;
     }
+    @include mediaSize(tablet){
+        height: 60px;
+    }
 }
 .inputBox{
     .label{
         display: block;
     }
     .input{
-        width: 250px;
+        width: 80vw;
         height: 30px;
-        margin: 15px 0 20px 0;
+        margin: 15px 5vw;
         padding: 0 10px;
         border-radius: 15px;
         border: 1px solid $colorShadow;
         box-shadow: none;
         &:focus{
             outline: none;
+        }
+        @include mediaSize(tablet){
+            width: 210px;
+            margin: 15px 0 20px 0;
         }
     }
 }
