--- a/src/stylesheets/components/_detail.scss
+++ b/src/stylesheets/components/_detail.scss
@@ -45,15 +45,38 @@
     }
 }
 .detail_best{
-    border: 1px solid red;
 
     width: 100%;
     height: 200px;
+    margin-top: 50px;
     margin-bottom: 25px;
 
     .detail__title{
         color: $colorTheme2;
         margin-bottom: 1em;
+    }
+    .answerTitle {
+        margin-bottom: 10px;
+    }
+    .bestWallet{
+        text-transform: capitalize;
+        margin-right: 5px;
+        line-height: 20px;
+    }
+    .infoText{
+        color: $colorTheme2;
+        margin-top: 5px;
+    }
+    .currency{
+        display: inline-block;
+        width: 40px;
+        margin-left: 25px;
+        margin-right: 10px;
+    }
+    .arrow{
+        color: $colorTheme2;
+        font-size: 18px;
+        margin-right: 10px;
     }
 }
 .navBox{
